--- a/Portfolio website/portfolio_html.html
+++ b/Portfolio website/portfolio_html.html
@@ -51,32 +51,37 @@
         <div id="Slideshow">
             <div id="Slideshow_Background">
                 <div id="Slideshow_Container">
-                    <!--slide 1 of 6-->
+                    <!--slide 1 of 7-->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/Portrait.png" alt="Picture of yourself">
                         <div class="text">I'm available to assist you on your project!</div>
                     </div>
-                    <!--slide 2 of 6-->
+                    <!--slide 2 of 7-->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/HTML_CSS_and_JavaScript.jpeg" alt="HTML, CSS, and JS logos">
                         <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, Javascript,</div>
                     </div>
-                    <!--slide 3 of 6-->
+                    <!--slide 3 of 7-->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/Python.png" alt="Python logo">
                         <div class="text">The popular programming language Python,</div>
                     </div>
-                    <!--slide 4 of 6-->
+                    <!--slide 4 of 7-->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/C_Sharp_and_Dot_NET.png" alt="C# logo">
                         <div class="text">C#, .NET Framework, ASP.NET, MVC, </div>
                     </div>
-                    <!--slide 5 of 6-->
+                    <!--slide 5 of 7-->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/SQL_and_Database.jpg" alt="SQL logo">
-                        <div class="text">back end development, databases and SQL.</div>
+                        <div class="text">back end development, databases, SQL</div>
                     </div>
-                    <!--slide 6 of 6-->
+                    <!--slide 6 of 7-->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="images/django-logo.jpg" alt="Django logo">
+                        <div class="text">and Django Experience.</div>
+                    </div>
+                    <!--slide 7 of 7-->
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="images/code.png" alt="Programming Art">
                         <div class="text"><a class="white-text contact" onclick="openForm()">Contact me now!</a></div>
