--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -130,12 +130,12 @@
                 <h1>GitHub</h1>
                 <p>you can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/TravisHeckel" target="_blank">Travis Heckel's GitHub</a></p>
+                    <p class="center"><a href="https://github.com/TravisHeckel" target="_blank"> Travis Heckel's GitHub </a></p>
                 </p>
             </div>
             <!--Right column-->
             <div class="Column_2">
-            <a href="https://github.com/TravisHeckel" target="_blank"><img src="images/GitHub.png"></a>
+            <a href="https://github.com/TravisHeckel" target="_blank"><img class ="center" src="images/GitHub.png"></a>
             </div>
         </div>
 
