--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <!-- Head -->    
     <head>
-        <meta charset="UTF-8" content="X-Content-Type-Options=nosniff">
-		<meta http-equiv="Content-Security-Policy" content=" default-src 'self'; script-src 'self'; img-src * data:; style-src 'self';base-uri 'self';form-action 'self'">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" /> 
         <title>Travis Heckel</title>
         <link rel="shortcut icon" type="img/jpg" href="images/coding_icon.png">
