--- a/Portfolio website/index.html
+++ b/Portfolio website/index.html
@@ -163,9 +163,9 @@
         <!--Footer section-->
         <footer>
             <p class="center">Travis Heckel | created 2023
-                <a href="" target="_blank"><img class="social_media" src="images/facebook.png" alt="Facebook Logo"></a>
-                <a href="" target="_blank"><img class="social_media" src="images/instagram.png" alt="Instagram Logo"></a>
-                <a href="" target="_blank"><img class="social_media" src="images/linkedin.png" alt="LinkedIn Logo"></a>
+                <a href="https://docs.google.com/document/d/1NLRAxw2Lz6AitIm--sycbBRMEDX0mTR4PhD_QE9zdQ8/edit?usp=sharing" target="_blank"><img class="social_media" src="images/resume.png" alt="Resume Logo"></a>
+                <a href="https://www.instagram.com/travisjheckel/" target="_blank"><img class="social_media" src="images/instagram.png" alt="Instagram Logo"></a>
+                <a href="https://www.linkedin.com/in/travis-heckel-548010147/" target="_blank"><img class="social_media" src="images/linkedin.png" alt="LinkedIn Logo"></a>
             </p>
         </footer>
 
